Created model entity classes

--- a/sberbank-logic/pom.xml
+++ b/sberbank-logic/pom.xml
@@ -11,4 +11,11 @@
 
     <artifactId>sberbank-logic</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>ru.klapatnyuk</groupId>
+            <artifactId>sberbank-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
