--- a/sberbank-web/pom.xml
+++ b/sberbank-web/pom.xml
@@ -14,9 +14,6 @@
     <properties>
         <vaadin.version>7.6.6</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
@@ -58,6 +55,11 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-client-compiled</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ru.klapatnyuk</groupId>
+            <artifactId>sberbank-logic</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -128,5 +130,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
