Started creation of handlers and business services

--- a/sberbank-model/pom.xml
+++ b/sberbank-model/pom.xml
@@ -11,4 +11,11 @@
 
     <artifactId>sberbank-model</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1208</version>
+        </dependency>
+    </dependencies>
 </project>
