Removed code fragments for 'folders'

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -2,7 +2,7 @@
 form.confirm.cancel           = Cancel
 form.confirm.ok               = Ok
 form.filter.group             = Groups
-form.filter.list              = List
+form.filter.list              = Active
 form.login.button             = Optikov av., 34
 form.login.lazy.wait          = Please wait..
 form.login.login.label        = Login
@@ -182,7 +182,7 @@ form.ptrn.message.save                  = Save
 form.ptrn.message.subject               = Subject:
 form.ptrn.message.subject.prompt        = Enter the subject..
 form.ptrn.poll.add                      = Create
-form.ptrn.poll.create                   = Create new pattern
+form.ptrn.poll.create                   = Create new document
 form.ptrn.poll.edit                     = Edit existing:
 form.ptrn.poll.prompt                   = Enter question..
 form.ptrn.poll.save                     = Save
@@ -208,22 +208,14 @@ head.msgr.poll.window.pattern = Choose pattern for new poll
 head.msgr.polls               = Polls' results
 head.msgr.requests            = Requests
 head.ptrn.message             = Pattern messages
-head.ptrn.poll                = Pattern polls
+head.ptrn.poll                = Documents
 head.ptrn.style               = Styles
 head.ptrn.window.folder       = Pattern folders
 head.window.template          = Poll templates
 
-menu.msgr          = Location address
-menu.msgr.history  = Notice board
-menu.msgr.in       = Reviews
-menu.msgr.out      = Messages
-menu.msgr.poll     = New poll
-menu.msgr.polls    = Polls
-menu.msgr.requests = Requests
-menu.ptrn          = Patterns
-menu.ptrn.message  = Messages
-menu.ptrn.poll     = Polls
-menu.ptrn.style    = Styles
+menu.msgr          = Document editor
+menu.msgr.in       = Documents
+menu.msgr.out      = Templates
 
 noti.msgr.attributes.floors.empty       = List of floors with current filter is empty
 noti.msgr.attributes.porches.empty      = List of porches is empty
