Added 'template type' field to 'document' tab

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -145,7 +145,7 @@ form.msgr.poll.custom                   = To offer a free answer
 form.msgr.poll.custom.label             = Free answer label:
 form.msgr.poll.expiration               = Actual to:
 form.msgr.poll.multiply                 = Allow selection of multiple options
-form.msgr.poll.question                 = Question:
+form.msgr.poll.question                 = Template:
 form.msgr.poll.question.prompt          = Enter your question..
 form.msgr.poll.recipient                = To:
 form.msgr.poll.recipient.grouping.floor = You have selected some recipients of <b>floor {0}</b>.<br />Group recipients by the floor?
@@ -184,7 +184,7 @@ form.ptrn.message.subject.prompt        = Enter the subject..
 form.ptrn.poll.add                      = Create
 form.ptrn.poll.create                   = Create new document
 form.ptrn.poll.edit                     = Edit existing:
-form.ptrn.poll.prompt                   = Enter question..
+form.ptrn.poll.prompt                   = Select template..
 form.ptrn.poll.save                     = Save
 form.ptrn.style.list                    = List
 form.ptrn.style.list.description        = Messages and polls are displayed in one list, sorted alphabetically.
