Added all possible field set to 'document' tab

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -139,10 +139,10 @@ form.msgr.pattern.empty                 = No patterns
 form.msgr.pattern.filter.folder         = Filter by folders
 form.msgr.pattern.filter.tag            = Filter by tags
 form.msgr.poll.choice                   = Answer choices:
-form.msgr.poll.choice.custom.prompt     = Enter label..
+form.msgr.poll.choice.custom.prompt     = Enter title..
 form.msgr.poll.choice.new.prompt        = Add choice..
 form.msgr.poll.custom                   = To offer a free answer
-form.msgr.poll.custom.label             = Free answer label:
+form.msgr.poll.custom.label             = Title:
 form.msgr.poll.expiration               = Actual to:
 form.msgr.poll.multiply                 = Allow selection of multiple options
 form.msgr.poll.question                 = Template:
