Added all markup for 'templates' tab

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -22,8 +22,15 @@ form.request.status.active    = Active
 form.request.status.approved  = Approved
 form.request.status.cancelled = Cancelled
 form.request.status.inactive  = Inactive
+form.strings.up               = Up
+form.strings.down             = Down
 form.strings.close            = Remove
-form.strings.prompt           = Enter your text..
+form.strings.prompt           = Enter field title..
+form.strings.label.prompt     = Enter field label..
+form.strings.type.prompt      = Choose field type..
+form.strings.type.line        = Line
+form.strings.type.area        = Multiline text
+form.strings.type.checkbox    = Checkbox
 
 head.brownie.code        = Brownie
 head.footer              = \u00A9 {0} | {1} {2} | {3} {4}
@@ -143,6 +150,7 @@ form.msgr.poll.choice.custom.prompt     = Enter title..
 form.msgr.poll.choice.new.prompt        = Add choice..
 form.msgr.poll.custom                   = To offer a free answer
 form.msgr.poll.custom.label             = Title:
+form.msgr.poll.fields.label             = Fields:
 form.msgr.poll.expiration               = Actual to:
 form.msgr.poll.multiply                 = Allow selection of multiple options
 form.msgr.poll.question                 = Template:
@@ -207,7 +215,7 @@ head.msgr.poll.window.confirm = Recipients grouping
 head.msgr.poll.window.pattern = Choose pattern for new poll
 head.msgr.polls               = Polls' results
 head.msgr.requests            = Requests
-head.ptrn.message             = Pattern messages
+head.ptrn.message             = Templates
 head.ptrn.poll                = Documents
 head.ptrn.style               = Styles
 head.ptrn.window.folder       = Pattern folders
