Small fixes of static markup

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -183,7 +183,7 @@ form.ptrn.folder.rename.prompt          = Enter folder's title..
 form.ptrn.folder.set                    = Search
 form.ptrn.message.add                   = Create
 form.ptrn.message.body                  = Message:
-form.ptrn.message.create                = Create new pattern
+form.ptrn.message.create                = Create new template
 form.ptrn.message.edit                  = Edit existing:
 form.ptrn.message.prompt                = Enter message..
 form.ptrn.message.save                  = Save
