--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -245,7 +245,7 @@ noti.msgr.out.recipients.validate       = Recipient can't be empty, select "Porc
 noti.msgr.out.simple.error              = Error while sending message
 noti.msgr.out.simple.sent               = The notice is successfully sent
 noti.msgr.out.starts.validate           = "Starts from" field contains wrong value format
-noti.msgr.poll.body.required            = The "question" field can't be empty
+noti.msgr.poll.body.required            = The "Title" field could not be empty
 noti.msgr.poll.choices.duplicates       = Choices list has duplicates
 noti.msgr.poll.choices.required         = Poll could contain at least two answer choice
 noti.msgr.poll.create.error             = Error of creating poll
@@ -270,7 +270,7 @@ noti.ptrn.message.create.error          = Error creating new message pattern
 noti.ptrn.message.created               = The message pattern is successfully created
 noti.ptrn.message.edit.error            = Error editing message pattern
 noti.ptrn.message.updated               = The message pattern is successfully updated
-noti.ptrn.poll.body.validate            = The "question" field can't be empty
+noti.ptrn.poll.body.validate            = The "Title" field could not be empty
 noti.ptrn.poll.choices.duplicates       = Choices list has duplicates
 noti.ptrn.poll.choices.required         = Poll could contain at least two answer choice
 noti.ptrn.poll.create.error             = Error creating new poll pattern
