Added all template local validation

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/config.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/config.properties
@@ -18,7 +18,7 @@ message.receive.limit      = 10
 message.save.limit         = 25
 message.subject.length     = 40
 message.intercom.length = 496
-message.intercom.cyrillic = [à-ÿÀ-ß]
+message.intercom.cyrillic = [\u0430-\u044F\u0410-\u042F]
 
 panel.subject.length = 13
 
@@ -28,7 +28,7 @@ receivable.description.length = 100
 
 time.inactive.interval = 1800
 time.login.interval    = 500000
-time.poll.interval     = 10000
+time.poll.interval     = 3000
 time.screen.interval   = 30
 
 url.brownie = brownie
