--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -25,9 +25,9 @@ form.request.status.inactive  = Inactive
 form.strings.up               = Up
 form.strings.down             = Down
 form.strings.close            = Remove
-form.strings.prompt           = Enter field title..
-form.strings.label.prompt     = Enter field label..
-form.strings.type.prompt      = Choose field type..
+form.strings.prompt           = Field title..
+form.strings.label.prompt     = Field label..
+form.strings.type.prompt      = Field type..
 form.strings.type.line        = Line
 form.strings.type.area        = Multiline text
 form.strings.type.checkbox    = Checkbox
@@ -246,8 +246,8 @@ noti.msgr.out.simple.error              = Error while sending message
 noti.msgr.out.simple.sent               = The notice is successfully sent
 noti.msgr.out.starts.validate           = "Starts from" field contains wrong value format
 noti.msgr.poll.body.required            = The "Title" field could not be empty
-noti.msgr.poll.choices.duplicates       = Choices list has duplicates
-noti.msgr.poll.choices.required         = Poll could contain at least two answer choice
+noti.msgr.poll.choices.duplicates       = Value of field "Field title" could not be duplicated
+noti.msgr.poll.choices.required         = Template could not be empty
 noti.msgr.poll.create.error             = Error of creating poll
 noti.msgr.poll.created                  = The poll is successfully created
 noti.msgr.poll.custom.required          = The "free answer label" field can't be empty
@@ -271,10 +271,11 @@ noti.ptrn.message.created               = The message pattern is successfully cr
 noti.ptrn.message.edit.error            = Error editing message pattern
 noti.ptrn.message.updated               = The message pattern is successfully updated
 noti.ptrn.poll.body.validate            = The "Title" field could not be empty
-noti.ptrn.poll.choices.duplicates       = Choices list has duplicates
-noti.ptrn.poll.choices.required         = Poll could contain at least two answer choice
+noti.ptrn.poll.body.unique.validate     = Field "Title" could not be duplicated
+noti.ptrn.poll.choices.duplicates       = Value of field "Field title" could not be duplicated
+noti.ptrn.poll.choices.required         = Template could not be empty
 noti.ptrn.poll.create.error             = Error creating new poll pattern
 noti.ptrn.poll.created                  = The poll pattern is successfully created
-noti.ptrn.poll.custom.required          = The "free answer label" field can't be empty
+noti.ptrn.poll.custom.required          = All fields are required
 noti.ptrn.poll.edit.error               = Error editing poll pattern
 noti.ptrn.poll.updated                  = The poll pattern is successfully updated
