Document tab is ready to change db data

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -270,6 +270,7 @@ noti.ptrn.message.create.error          = Error creating new message pattern
 noti.ptrn.message.created               = The message pattern is successfully created
 noti.ptrn.message.edit.error            = Error editing message pattern
 noti.ptrn.message.updated               = The message pattern is successfully updated
+noti.ptrn.poll.template.validate        = Choose document template
 noti.ptrn.poll.body.validate            = The "Title" field could not be empty
 noti.ptrn.poll.body.unique.validate     = Field "Title" could not be duplicated
 noti.ptrn.poll.choices.duplicates       = Value of field "Field title" could not be duplicated
