Added 'clear/cancel' button

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -191,6 +191,8 @@ form.ptrn.message.subject               = Subject:
 form.ptrn.message.subject.prompt        = Enter the subject..
 form.ptrn.poll.add                      = Create
 form.ptrn.poll.create                   = Create new document
+form.ptrn.poll.clear                    = Clear
+form.ptrn.poll.cancel                   = Cancel
 form.ptrn.poll.edit                     = Edit existing:
 form.ptrn.poll.prompt                   = Select template..
 form.ptrn.poll.save                     = Save
