--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -193,6 +193,7 @@ form.ptrn.poll.add                      = Create
 form.ptrn.poll.create                   = Create new document
 form.ptrn.poll.clear                    = Clear
 form.ptrn.poll.cancel                   = Cancel
+form.ptrn.poll.remove                   = Remove
 form.ptrn.poll.edit                     = Edit existing:
 form.ptrn.poll.prompt                   = Select template..
 form.ptrn.poll.save                     = Save
