Removed legacy 'noti' l18n keys

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -1,4 +1,4 @@
-form.profile.status           = Logged in:
+form.profile.status           = Logged in\:
 form.profile.logout           = Logout
 
 form.login.button             = Optikov av., 34
@@ -43,118 +43,39 @@ head.ptrn.message             = Templates
 head.ptrn.poll                = Documents
 
 
-noti.authentication.problem                      = Take note of any unsaved data, and <u>click here</u> or press esc to continue.
-noti.authentication.problem.caption              = Authentication problem
-noti.communication.problem                       = Take note of any unsaved data, and <u>click here</u> or press esc to continue.
-noti.communication.problem.caption               = Communication problem
-noti.concierge.receive.error                     = Error recipient setting receiving
-noti.config.receive.error                        = Error configuration receiving
-noti.cookies.disabled                            = This application requires cookies to function.<br/>please enable cookies in your browser and <u>click here</u> or press esc to try again.
-noti.cookies.disabled.caption                    = Cookies disabled
-noti.encoding.error=Unsupported encoding detected
-noti.error.description.business                  = {0} ({1})<br />{2}
-noti.error.description.business.time             = [{0}] {1} [{2}]<br />{3}
-noti.error.description.time                      = [{0}] {1}
-noti.event.error                                 = Event handling error: {0}
-noti.folder.receive.error                        = Error pattern folders receiving
-noti.gk.access.portal.brand.code.not.specified   = The query does not have a brand code
-noti.gk.access.portal.ff.not.supported           = The license was found in the activation code, does not support personal area
-noti.gk.access.portal.incorrect.credentials      = The discrepancy between the location and password
-noti.gk.access.portal.incorrect.request.data     = In the request is missing one or more parameters
-noti.gk.access.portal.license.brandcode.mismatch = The license was found in the activation code belongs to the location with another brand-code
-noti.gk.access.portal.license.expired            = The license was found in the activation code has expired
-noti.gk.access.portal.no.brand.code.found        = Not found the location or the management company with the specified brand code
-noti.gk.access.portal.no.license                 = Given the activation code has no license
-noti.gk.access.portal.no.registered.ff           = In the diagram above registered personal account
-noti.gk.licensing.duplicated.flat.frontend       = For this, the apartment has filed the license with the application type "flat frontend"
-noti.gk.licensing.forced.limit.mismatch          = There is a limit of installations of the application, specify a different value
-noti.internal.error                              = Please notify the administrator.<br/>take note of any unsaved data, and <u>click here</u> or press esc to continue.
-noti.internal.error.caption                      = Internal error
-noti.layout.error=Error layout initialization\: {0}
-noti.login.captcha.invalid=The captcha is not entered or is entered incorrectly
-noti.login.connect.error                         = Authorization connect error
-noti.login.error                                 = Authorization error
-noti.login.invalid                               = Invalid login or/and password
-noti.login.login.invalid                         = "{0}" can't be empty
-noti.login.login.password.invalid                = Login and password can't be empty
-noti.login.password.invalid                      = "{0}" can't be empty
-noti.message.acknowledge.error                   = Error message acknowledge
-noti.message.full.receive.error                  = Error full message receiving
-noti.message.receive.error                       = Error message receiving
-noti.pattern.message.receive.error               = Error receiving message patterns
-noti.pattern.poll.receive.error                  = Error receiving poll patterns
-noti.poll.reply.error                            = Error request's poll reply sending
-noti.poll.reply.sent                             = The poll reply is successfully sent
-noti.request.receive.error                       = Error requests receiving
-noti.rpc.response.field.null                     = Response's required field is null: {0}
-noti.rpc.response.list.empty                     = Response required listed field is empty: {0}
-noti.rpc.response.list.null                      = Response required listed field has null value: {0}
-noti.rpc.response.list.size                      = Response required listed field has wrong size: {0}
-noti.rpc.response.null                           = Response is null: {0}
-noti.save.error                                  = Error document generation
-noti.save.font.error                             = Font symbol invalid
-noti.save.validation.error                       = Error document validation
-noti.session.expired                             = Take note of any unsaved data, and <u>click here</u> or press esc key to continue.
-noti.session.expired.caption                     = Session expired
-noti.structure.error                             = Getting structure error
-noti.version.error                               = Getting version error
-
 menu.msgr          = Document editor
 menu.msgr.in       = Documents
 menu.msgr.out      = Templates
 
-noti.msgr.attributes.floors.empty       = List of floors with current filter is empty
-noti.msgr.attributes.porches.empty      = List of porches is empty
-noti.msgr.history.receive.error         = History receive error
-noti.msgr.history.unmount.error         = Advertisement unmount error
-noti.msgr.history.unmounted             = The Advertisement is successfully unmounted
-noti.msgr.in.check.error                = Error reviews check
-noti.msgr.masterdata.flats.empty        = List of flats with current filter is empty
-noti.msgr.out.advert.error              = Error while sending advertisment
-noti.msgr.out.advert.sent               = The advertisment is successfully sent
-noti.msgr.out.body.advert.validate      = The "Advertisement" field can't be empty
-noti.msgr.out.body.simple.validate      = The "Notice" field can't be empty
-noti.msgr.out.body.validate             = The "Message" field can't be empty
-noti.msgr.out.expires.validate          = "Expires to" field contains wrong value format
-noti.msgr.out.period.empty              = "Start with" is smaller than "actual to"
-noti.msgr.out.recipient.invalid         = Error recipient invalid
-noti.msgr.out.recipient.validate        = The "Flat" field can't be empty
-noti.msgr.out.recipients.validate       = Recipient can't be empty, select "Porch", "Floor" or "Flat"
-noti.msgr.out.simple.error              = Error while sending message
-noti.msgr.out.simple.sent               = The notice is successfully sent
-noti.msgr.out.starts.validate           = "Starts from" field contains wrong value format
-noti.msgr.poll.body.required            = The "Title" field could not be empty
-noti.msgr.poll.choices.duplicates       = Value of field "Field title" could not be duplicated
-noti.msgr.poll.choices.required         = Template could not be empty
-noti.msgr.poll.create.error             = Error of creating poll
-noti.msgr.poll.created                  = The poll is successfully created
-noti.msgr.poll.custom.required          = The "free answer label" field can't be empty
-noti.msgr.poll.expiration.required      = The "actual to" field can't be empty
-noti.msgr.poll.period.empty             = "Start with" is smaller than "actual to"
-noti.msgr.poll.recipient.required       = Choose recipients of the poll
-noti.msgr.poll.start.required           = The "Start with" field can't be empty
-noti.msgr.polls.receive.error           = Error polls receiving
-noti.msgr.polls.receive.result.error    = Error poll result receiving
-noti.msgr.polls.receive.specific.error  = Error poll's result receiving
-noti.ptrn.folder.create.error           = Error of folder creation
-noti.ptrn.folder.create.validate        = Folder's name can't be empty
-noti.ptrn.folder.created                = The folder is successfully created
-noti.ptrn.folder.duplicate              = Folder "{0}" already contains a folder named "{1}"
-noti.ptrn.folder.rename.error           = Error of folder renaming
-noti.ptrn.folder.renamed                = The folder is successfully renamed
-noti.ptrn.folder.validate               = The folder of pattern can't be empty
-noti.ptrn.message.body.validate         = The "message" field can't be empty
-noti.ptrn.message.create.error          = Error creating new message pattern
-noti.ptrn.message.created               = The message pattern is successfully created
-noti.ptrn.message.edit.error            = Error editing message pattern
-noti.ptrn.message.updated               = The message pattern is successfully updated
+
+noti.error.description.business                  = {0} ({1})<br />{2}
+noti.error.description.business.time             = [{0}] {1} [{2}]<br />{3}
+noti.error.description.time                      = [{0}] {1}
+
+noti.session.expired.caption                     = Session expired
+noti.session.expired                             = Take note of any unsaved data, and <u>click here</u> or press esc key to continue.
+noti.communication.problem.caption               = Communication problem
+noti.communication.problem                       = Take note of any unsaved data, and <u>click here</u> or press esc to continue.
+noti.authentication.problem.caption              = Authentication problem
+noti.authentication.problem                      = Take note of any unsaved data, and <u>click here</u> or press esc to continue.
+noti.internal.error.caption                      = Internal error
+noti.internal.error                              = Please notify the administrator.<br/>take note of any unsaved data, and <u>click here</u> or press esc to continue.
+noti.cookies.disabled.caption                    = Cookies disabled
+noti.cookies.disabled                            = This application requires cookies to function.<br/>please enable cookies in your browser and <u>click here</u> or press esc to try again.
+
+noti.login.error                                 = Authorization error
+noti.login.invalid                               = Invalid login or/and password
+noti.login.password.invalid                      = "{0}" can't be empty
+
+noti.login.captcha.invalid=The captcha is not entered or is entered incorrectly
+noti.login.connect.error                         = Authorization connect error
+noti.login.login.invalid                         = "{0}" can't be empty
+noti.login.login.password.invalid                = Login and password can't be empty
+
 noti.ptrn.poll.template.validate        = Choose document template
 noti.ptrn.poll.body.validate            = The "Title" field could not be empty
 noti.ptrn.poll.body.unique.validate     = Field "Title" could not be duplicated
-noti.ptrn.poll.choices.duplicates       = Value of field "Field title" could not be duplicated
 noti.ptrn.poll.choices.required         = Template could not be empty
-noti.ptrn.poll.create.error             = Error creating new poll pattern
-noti.ptrn.poll.created                  = The poll pattern is successfully created
+noti.ptrn.poll.choices.duplicates       = Value of field "Field title" could not be duplicated
 noti.ptrn.poll.custom.required          = All fields are required
-noti.ptrn.poll.edit.error               = Error editing poll pattern
-noti.ptrn.poll.updated                  = The poll pattern is successfully updated
+
