Optimized strings.properties code

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -1,81 +1,85 @@
-form.profile.status           = Logged in\:
-form.profile.logout           = Logout
+# form
 
-form.login.button             = Optikov av., 34
-form.login.login.label        = Login
-form.login.password.label     = Password
+form.profile.status=Logged in\:
+form.profile.logout=Logout
 
-form.strings.prompt           = Field title..
-form.strings.label.prompt     = Field label..
-form.strings.type.prompt      = Field type..
-form.strings.type.line        = Line
-form.strings.type.area        = Multiline text
-form.strings.type.checkbox    = Checkbox
-form.strings.up               = Up
-form.strings.down             = Down
-form.strings.close            = Remove
+form.login.button=Optikov av., 34
+form.login.login.label=Login
+form.login.password.label=Password
 
-form.msgr.poll.choice.custom.prompt     = Enter title..
-form.msgr.poll.custom.label             = Title:
-form.msgr.poll.fields.label             = Fields:
-form.msgr.poll.question                 = Template:
+form.strings.prompt=Field title..
+form.strings.label.prompt=Field label..
+form.strings.type.prompt=Field type..
+form.strings.type.line=Line
+form.strings.type.area=Multiline text
+form.strings.type.checkbox=Checkbox
+form.strings.up=Up
+form.strings.down=Down
+form.strings.close=Remove
 
-form.ptrn.message.create                = Create new template
-form.ptrn.message.edit                  = Edit existing:
+form.msgr.poll.choice.custom.prompt=Enter title..
+form.msgr.poll.custom.label=Title:
+form.msgr.poll.fields.label=Fields:
+form.msgr.poll.question=Template:
 
-form.ptrn.poll.create                   = Create new document
-form.ptrn.poll.edit                     = Edit existing:
-form.ptrn.poll.add                      = Create
-form.ptrn.poll.clear                    = Clear
-form.ptrn.poll.cancel                   = Cancel
-form.ptrn.poll.remove                   = Remove
-form.ptrn.poll.save                     = Save
-form.ptrn.poll.prompt                   = Select template..
+form.ptrn.message.create=Create new template
+form.ptrn.message.edit=Edit existing:
 
+form.ptrn.poll.create=Create new document
+form.ptrn.poll.edit=Edit existing:
+form.ptrn.poll.add=Create
+form.ptrn.poll.clear=Clear
+form.ptrn.poll.cancel=Cancel
+form.ptrn.poll.remove=Remove
+form.ptrn.poll.save=Save
+form.ptrn.poll.prompt=Select template..
 
-head.app                      = MC Representative
-head.h2                  = {0} | {1}
-head.footer.production   = \u00A9 {0}
-head.footer.copyright    = 2015 - {0} OOO "LABORATORIA ONEGO" info@onegolabs.com
-head.window.login        = Login
+# head
 
-head.ptrn.message             = Templates
-head.ptrn.poll                = Documents
+head.app=MC Representative
+head.h2={0} | {1}
+head.footer.production=\u00A9 {0}
+head.footer.copyright=2015 - {0} OOO "LABORATORIA ONEGO" info@onegolabs.com
+head.window.login=Login
 
+head.ptrn.message=Templates
+head.ptrn.poll=Documents
 
-menu.msgr          = Document editor
-menu.msgr.in       = Documents
-menu.msgr.out      = Templates
+# menu
 
+menu.msgr=Document editor
+menu.msgr.in=Documents
+menu.msgr.out=Templates
 
-noti.error.description.business                  = {0} ({1})<br />{2}
-noti.error.description.business.time             = [{0}] {1} [{2}]<br />{3}
-noti.error.description.time                      = [{0}] {1}
+# noti
 
-noti.session.expired.caption                     = Session expired
-noti.session.expired                             = Take note of any unsaved data, and <u>click here</u> or press esc key to continue.
-noti.communication.problem.caption               = Communication problem
-noti.communication.problem                       = Take note of any unsaved data, and <u>click here</u> or press esc to continue.
-noti.authentication.problem.caption              = Authentication problem
-noti.authentication.problem                      = Take note of any unsaved data, and <u>click here</u> or press esc to continue.
-noti.internal.error.caption                      = Internal error
-noti.internal.error                              = Please notify the administrator.<br/>take note of any unsaved data, and <u>click here</u> or press esc to continue.
-noti.cookies.disabled.caption                    = Cookies disabled
-noti.cookies.disabled                            = This application requires cookies to function.<br/>please enable cookies in your browser and <u>click here</u> or press esc to try again.
+noti.error.description.business={0} ({1})<br />{2}
+noti.error.description.business.time=[{0}] {1} [{2}]<br />{3}
+noti.error.description.time=[{0}] {1}
 
-noti.login.error                                 = Authorization error
-noti.login.invalid                               = Invalid login or/and password
-noti.login.password.invalid                      = "{0}" can't be empty
+noti.session.expired.caption=Session expired
+noti.session.expired=Take note of any unsaved data, and <u>click here</u> or press esc key to continue.
+noti.communication.problem.caption=Communication problem
+noti.communication.problem=Take note of any unsaved data, and <u>click here</u> or press esc to continue.
+noti.authentication.problem.caption=Authentication problem
+noti.authentication.problem=Take note of any unsaved data, and <u>click here</u> or press esc to continue.
+noti.internal.error.caption=Internal error
+noti.internal.error=Please notify the administrator.<br/>take note of any unsaved data, and <u>click here</u> or press esc to continue.
+noti.cookies.disabled.caption=Cookies disabled
+noti.cookies.disabled=This application requires cookies to function.<br/>please enable cookies in your browser and <u>click here</u> or press esc to try again.
+
+noti.login.error=Authorization error
+noti.login.invalid=Invalid login or/and password
+noti.login.password.invalid="{0}" can't be empty
 
 noti.login.captcha.invalid=The captcha is not entered or is entered incorrectly
-noti.login.connect.error                         = Authorization connect error
-noti.login.login.invalid                         = "{0}" can't be empty
-noti.login.login.password.invalid                = Login and password can't be empty
+noti.login.connect.error=Authorization connect error
+noti.login.login.invalid="{0}" can't be empty
+noti.login.login.password.invalid=Login and password can't be empty
 
-noti.ptrn.poll.template.validate        = Choose document template
-noti.ptrn.poll.body.validate            = The "Title" field could not be empty
-noti.ptrn.poll.body.unique.validate     = Field "Title" could not be duplicated
-noti.ptrn.poll.choices.required         = Template could not be empty
-noti.ptrn.poll.choices.duplicates       = Value of field "Field title" could not be duplicated
-noti.ptrn.poll.custom.required          = All fields are required
-
+noti.ptrn.poll.template.validate=Choose document template
+noti.ptrn.poll.body.validate=The "Title" field could not be empty
+noti.ptrn.poll.body.unique.validate=Field "Title" could not be duplicated
+noti.ptrn.poll.choices.required=Template could not be empty
+noti.ptrn.poll.choices.duplicates=Value of field "Field title" could not be duplicated
+noti.ptrn.poll.custom.required=All fields are required
