'form' i18n keys naming refactoring

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -1,38 +1,38 @@
 # form
 
-form.profile.status=Logged in\:
-form.profile.logout=Logout
+form.profile.status.label=Logged in:
+form.profile.logout.button=Logout
 
 form.login.button=Optikov av., 34
 form.login.login.label=Login
 form.login.password.label=Password
 
-form.strings.prompt=Field title..
-form.strings.label.prompt=Field label..
-form.strings.type.prompt=Field type..
-form.strings.type.line=Line
-form.strings.type.area=Multiline text
-form.strings.type.checkbox=Checkbox
-form.strings.up=Up
-form.strings.down=Down
-form.strings.close=Remove
+form.field.title.prompt=Field title..
+form.field.label.prompt=Field label..
+form.field.type.prompt=Field type..
+form.field.type.line=Line
+form.field.type.area=Multiline text
+form.field.type.checkbox=Checkbox
+form.field.up=Up
+form.field.down=Down
+form.field.remove=Remove
 
-form.msgr.poll.choice.custom.prompt=Enter title..
-form.msgr.poll.custom.label=Title:
-form.msgr.poll.fields.label=Fields:
-form.msgr.poll.question=Template:
+form.entity.title.prompt=Enter title..
+form.entity.title.label=Title:
+form.entity.create=Create
+form.entity.clear=Clear
+form.entity.cancel=Cancel
+form.entity.remove=Remove
+form.entity.save=Save
 
-form.ptrn.message.create=Create new template
-form.ptrn.message.edit=Edit existing:
+form.document.template.label=Template:
+form.document.edit.label=Edit existing:
+form.document.create.new.button=Create new document
+form.document.template.prompt=Select template..
 
-form.ptrn.poll.create=Create new document
-form.ptrn.poll.edit=Edit existing:
-form.ptrn.poll.add=Create
-form.ptrn.poll.clear=Clear
-form.ptrn.poll.cancel=Cancel
-form.ptrn.poll.remove=Remove
-form.ptrn.poll.save=Save
-form.ptrn.poll.prompt=Select template..
+form.template.fields.label=Template fields\:
+form.template.create.new.button=Create new template
+form.template.edit.label=Edit existing:
 
 # head
 
