I18n keys naming refactoring

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -1,6 +1,6 @@
 # form
 
-form.profile.status.label=Logged in:
+form.profile.status.label=Logged in\:
 form.profile.logout.button=Logout
 
 form.login.button=Optikov av., 34
@@ -25,7 +25,7 @@ form.entity.cancel=Cancel
 form.entity.remove=Remove
 form.entity.save=Save
 
-form.document.template.label=Template:
+form.document.template.label=Template\:
 form.document.edit.label=Edit existing:
 form.document.create.new.button=Create new document
 form.document.template.prompt=Select template..
@@ -36,20 +36,18 @@ form.template.edit.label=Edit existing:
 
 # head
 
-head.app=MC Representative
+head.application=MC Representative
 head.h2={0} | {1}
-head.footer.production=\u00A9 {0}
-head.footer.copyright=2015 - {0} OOO "LABORATORIA ONEGO" info@onegolabs.com
+head.copyright=\u00A9 2016 Vyacheslav Klapatnyuk klapatnyuk@yandex.ru
 head.window.login=Login
-
-head.ptrn.message=Templates
-head.ptrn.poll=Documents
+head.template=Document templates
+head.document=Documents
 
 # menu
 
-menu.msgr=Document editor
-menu.msgr.in=Documents
-menu.msgr.out=Templates
+menu.editor=Document editor
+menu.editor.document=Documents
+menu.editor.template=Templates
 
 # noti
 
@@ -69,17 +67,14 @@ noti.cookies.disabled.caption=Cookies disabled
 noti.cookies.disabled=This application requires cookies to function.<br/>please enable cookies in your browser and <u>click here</u> or press esc to try again.
 
 noti.login.error=Authorization error
-noti.login.invalid=Invalid login or/and password
-noti.login.password.invalid="{0}" can't be empty
-
-noti.login.captcha.invalid=The captcha is not entered or is entered incorrectly
+noti.login.invalid=Login and password can't be empty
 noti.login.connect.error=Authorization connect error
-noti.login.login.invalid="{0}" can't be empty
-noti.login.login.password.invalid=Login and password can't be empty
 
-noti.ptrn.poll.template.validate=Choose document template
-noti.ptrn.poll.body.validate=The "Title" field could not be empty
-noti.ptrn.poll.body.unique.validate=Field "Title" could not be duplicated
-noti.ptrn.poll.choices.required=Template could not be empty
-noti.ptrn.poll.choices.duplicates=Value of field "Field title" could not be duplicated
-noti.ptrn.poll.custom.required=All fields are required
+noti.entity.title.empty.validate=The "Title" field could not be empty
+noti.entity.title.unique.validate=Field "Title" could not be duplicated
+
+noti.document.template.validate=Choose document template
+
+noti.template.fields.required=Template could not be empty
+noti.template.field.title.unique.validate=Value of field "Field title" could not be duplicated
+noti.template.fields.all.required=All fields are required
