--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/strings.properties
@@ -3,7 +3,7 @@
 form.profile.status.label=Logged in\:
 form.profile.logout.button=Logout
 
-form.login.button=Optikov av., 34
+form.login.button=Login
 form.login.login.label=Login
 form.login.password.label=Password
 
@@ -11,14 +11,14 @@ form.field.title.prompt=Field title..
 form.field.label.prompt=Field label..
 form.field.type.prompt=Field type..
 form.field.type.line=Line
-form.field.type.area=Multiline text
+form.field.type.area=Text
 form.field.type.checkbox=Checkbox
 form.field.up=Up
 form.field.down=Down
 form.field.remove=Remove
 
 form.entity.title.prompt=Enter title..
-form.entity.title.label=Title:
+form.entity.title.label=Title\:
 form.entity.create=Create
 form.entity.clear=Clear
 form.entity.cancel=Cancel
@@ -26,17 +26,17 @@ form.entity.remove=Remove
 form.entity.save=Save
 
 form.document.template.label=Template\:
-form.document.edit.label=Edit existing:
+form.document.edit.label=Edit documents\:
 form.document.create.new.button=Create new document
-form.document.template.prompt=Select template..
+form.document.template.prompt=Choose template..
 
-form.template.fields.label=Template fields\:
+form.template.fields.label=Template body\:
 form.template.create.new.button=Create new template
-form.template.edit.label=Edit existing:
+form.template.edit.label=Edit templates\:
 
 # head
 
-head.application=MC Representative
+head.application=Sberbank Technology | Document editor
 head.h2={0} | {1}
 head.copyright=\u00A9 2016 Vyacheslav Klapatnyuk klapatnyuk@yandex.ru
 head.window.login=Login
@@ -70,7 +70,7 @@ noti.login.error=Authorization error
 noti.login.invalid=Login and password can't be empty
 noti.login.connect.error=Authorization connect error
 
-noti.entity.title.empty.validate=The "Title" field could not be empty
+noti.entity.title.empty.validate=Field "Title" field could not be empty
 noti.entity.title.unique.validate=Field "Title" could not be duplicated
 
 noti.document.template.validate=Choose document template
